--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -2,14 +2,13 @@
 
 {% block content %}  
     <div>
+      <img src="{{ user.avatar(128) }}" alt="" srcset="">
         <h1>
-          User: {{ user.username }}
+           User: {{ user.username }}
         </h1>
         <hr>
         {% for post in posts %}
-        <p>
-          {{ post.author.username }} says: {{ post.body }}
-        </p>
+          {% include '_post.html' %}
         {% endfor %}
     </div>
 {% endblock %}
