--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -44,6 +44,9 @@
               <a class="nav-link" href="{{ url_for('user', username=current_user.username) }}">Profile</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('upload_file') }}">Upload File</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
             </li>
             {% endif %}
