--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block content %}  
+{% block app_content %}  
     <div>
       <img src="{{ user.avatar(128) }}" alt="" srcset="">
         <h1>
